--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "express": "^5.1.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "sqlite3": "^5.1.7"
   }
 }
